--- a/node-typescript-starter/package.json
+++ b/node-typescript-starter/package.json
@@ -4,11 +4,21 @@
   "description": "Node project starter with Typescript, ESLint and Prettier",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
+    "eslint:fix": "eslint --fix"
+  },
   "dependencies": {
     "typescript": "^4.1.3"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   }
 }
