--- a/node-typescript-starter/package.json
+++ b/node-typescript-starter/package.json
@@ -8,9 +8,6 @@
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
     "eslint:fix": "eslint --fix"
   },
-  "dependencies": {
-    "typescript": "^4.1.3"
-  },
   "devDependencies": {
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
@@ -18,7 +15,10 @@
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1"
+    "prettier": "^2.2.1",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
