--- a/node-typescript-mongo/package.json
+++ b/node-typescript-mongo/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
+    "start": "nodemon --watch \\\"*.ts\\\" --exec \\\"ts-node\\\" src/db-connection.ts",
     "eslint:fix": "eslint --fix"
   },
   "devDependencies": {
+    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
@@ -20,5 +21,8 @@
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "mongoose": "^5.11.14"
   }
 }
