Retrieve data from the database

--- a/node-typescript-mongo/package.json
+++ b/node-typescript-mongo/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "start": "nodemon --watch \\\"*.ts\\\" --exec \\\"ts-node\\\" src/index.ts",
+    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" src/index.ts",
     "eslint:fix": "eslint --fix"
   },
   "devDependencies": {
