--- a/node-gdrive-api/package.json
+++ b/node-gdrive-api/package.json
@@ -20,5 +20,9 @@
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "googleapis": "^67.0.0"
   }
 }
