--- a/node-gdrive-api/package.json
+++ b/node-gdrive-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-typescript-starter",
+  "name": "node-gdrive-api",
   "version": "1.0.0",
   "description": "Node project starter with Typescript, ESLint and Prettier",
   "main": "index.js",
@@ -7,6 +7,10 @@
   "scripts": {
     "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
     "eslint:fix": "eslint --fix"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "googleapis": "^67.0.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
@@ -21,8 +25,4 @@
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
-  "dependencies": {
-    "dotenv": "^8.2.0",
-    "googleapis": "^67.0.0"
-  }
 }
