--- a/node-upload-files/package.json
+++ b/node-upload-files/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/mongoose": "^5.10.3",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
@@ -18,6 +19,7 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
