--- a/node-upload-files/package.json
+++ b/node-upload-files/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.10.3",
     "@types/multer": "^1.4.5",
     "@types/node": "^14.14.22",
@@ -28,6 +29,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.14"
   }
 }
