--- a/commit-lint-app/package.json
+++ b/commit-lint-app/package.json
@@ -16,6 +16,7 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
+    "husky": "^5.1.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
