--- a/commit-lint-app/package.json
+++ b/commit-lint-app/package.json
@@ -9,6 +9,8 @@
     "eslint:fix": "eslint --fix"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.0.1",
+    "@commitlint/config-conventional": "^12.0.1",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
