--- a/commit-lint-app/package.json
+++ b/commit-lint-app/package.json
@@ -18,15 +18,12 @@
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
-    "husky": "^5.1.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
+  "dependencies": {
+    "husky": "^5.1.3"
   }
 }
