--- a/node-rest-api/package.json
+++ b/node-rest-api/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-rest-api",
+  "name": "node-typescript-starter",
   "version": "1.0.0",
   "description": "Node project starter with Typescript, ESLint and Prettier",
   "main": "index.js",
@@ -9,6 +9,8 @@
     "eslint:fix": "eslint --fix"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
@@ -20,5 +22,10 @@
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^5.12.1"
   }
 }
