chore: configure spring profiles for the application

--- a/springboot-starter/pom.xml
+++ b/springboot-starter/pom.xml
@@ -69,4 +69,30 @@
 		</plugins>
 	</build>
 
+	<profiles>
+		<profile>
+			<id>dev</id>
+			<activation>
+				<activeByDefault>true</activeByDefault>
+			</activation>
+			<properties>
+				<build.profile.id>dev</build.profile.id>
+				<currentProfile>dev</currentProfile>
+			</properties>
+		</profile>
+		<profile>
+			<id>prod</id>
+			<properties>
+				<build.profile.id>prod</build.profile.id>
+				<currentProfile>prod</currentProfile>
+			</properties>
+		</profile>
+		<profile>
+			<id>test</id>
+			<properties>
+				<build.profile.id>test</build.profile.id>
+				<currentProfile>test</currentProfile>
+			</properties>
+		</profile>
+	</profiles>
 </project>
