--- a/springboot-starter/src/main/resources/application.properties
+++ b/springboot-starter/src/main/resources/application.properties
@@ -1,5 +1,1 @@
-server.port=7450
-
-spring.datasource.url=jdbc:mysql://localhost:3306/lof?serverTimezone=UTC&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=supratecgeek
+spring.profiles.active=@currentProfile@
