--- a/springboot-starter/src/main/resources/application-example.properties
+++ b/springboot-starter/src/main/resources/application-example.properties
@@ -1,5 +1,20 @@
 server.port=7450
 
-spring.datasource.url=jdbc:mysql://localhost:3306/lof?serverTimezone=UTC&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=supratecgeek
+spring.datasource.url=jdbc:mysql://localhost:3306/db_test?serverTimezone=UTC&useSSL=false
+spring.datasource.username=admin
+spring.datasource.password=secret
+
+## Hibernate Properties
+spring.jpa.open-in-view=false
+
+# Prevent hibernate from creating a hibernate_sequence table
+spring.jpa.hibernate.use-new-id-generator-mappings=false
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto=create
+
+# Whether to enable logging of SQL statements
+spring.jpa.show-sql=false
+
+# Default value is embedded which mean it only applies if you're running an embedded database.
+spring.datasource.initialization-mode=never
