chore: configure logging in file

--- a/springboot-starter/src/main/resources/application-example.properties
+++ b/springboot-starter/src/main/resources/application-example.properties
@@ -18,3 +18,7 @@ spring.jpa.show-sql=false
 
 # Default value is embedded which mean it only applies if you're running an embedded database.
 spring.datasource.initialization-mode=never
+
+# Logging properties
+logging.level.web=INFO
+logging.file.path=logs
