feat: configure database connection

--- a/springboot-mongodb/src/main/resources/application-example.properties
+++ b/springboot-mongodb/src/main/resources/application-example.properties
@@ -7,4 +7,4 @@ spring.data.mongodb.password=blogUserPwd
 spring.data.mongodb.database=blog
 spring.data.mongodb.auto-index-creation=true
 
-# spring.data.mongodb.uri=
+spring.data.mongodb.uri=
