--- a/node-webapp-pdf/package.json
+++ b/node-webapp-pdf/package.json
@@ -10,6 +10,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/faker": "^5.5.3",
+    "@types/lodash": "^4.14.168",
     "@types/mongoose": "^5.10.3",
     "@types/node": "^14.14.22",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
@@ -26,6 +28,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
+    "lodash": "^4.17.21",
     "mongoose": "^5.12.1"
   }
 }
