--- a/node-webapp-pdf/package.json
+++ b/node-webapp-pdf/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.11",
+    "@types/express-handlebars": "^3.1.0",
     "@types/faker": "^5.5.3",
     "@types/lodash": "^4.14.168",
     "@types/mongoose": "^5.10.3",
@@ -28,6 +29,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-handlebars": "^5.3.1",
     "faker": "^5.5.3",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.1"
