feat: create the endpoint to download a PDF

--- a/node-webapp-pdf/package.json
+++ b/node-webapp-pdf/package.json
@@ -32,6 +32,7 @@
     "express-handlebars": "^5.3.1",
     "faker": "^5.5.3",
     "lodash": "^4.17.21",
-    "mongoose": "^5.12.1"
+    "mongoose": "^5.12.1",
+    "puppeteer": "^9.1.1"
   }
 }
