--- a/node-web-scraping/package.json
+++ b/node-web-scraping/package.json
@@ -24,6 +24,9 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@types/cheerio": "^0.22.30",
+    "axios": "^0.21.1",
+    "cheerio": "^1.0.0-rc.10",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.12.1"
