--- a/node-prisma-mysql/package.json
+++ b/node-prisma-mysql/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
+    "prisma": "^2.27.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   }
