--- a/node-prisma-mysql/package.json
+++ b/node-prisma-mysql/package.json
@@ -18,8 +18,11 @@
     "eslint-plugin-sort-destructure-keys": "^1.3.5",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
-    "prisma": "^2.27.0",
+    "prisma": "2.27.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "@prisma/client": "2.27.0"
   }
 }
