feat: update the readme

--- a/springboot-email/src/main/resources/application-exemaple.properties
+++ b/springboot-email/src/main/resources/application-exemaple.properties
@@ -1,12 +1,12 @@
 spring.mail.host=smtp.eu.mailgun.org
 spring.mail.port=587
-spring.mail.username=postmaster@mailgun.tericcabrel.com
-spring.mail.password=46673839153dd9e2b3bf48996174bb3b-7cd1ac2b-fc58c79a
+spring.mail.username=mailgun_user
+spring.mail.password=mailgun_password
 spring.mail.properties.mail.transport.protocol=smtp
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.from=contact@tericcabrel.com
+spring.mail.properties.mail.smtp.from=contact@email.com
 spring.mail.default-encoding=UTF-8
 # spring.mail.test-connection=true
 mail.from.name=AwesomeApp
