--- a/starter/pom.xml
+++ b/starter/pom.xml
@@ -19,5 +19,10 @@
       <version>5.4.0</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.32</version>
+    </dependency>
   </dependencies>
 </project>
