feat: create models for the database

--- a/node-mongodb-transaction/package.json
+++ b/node-mongodb-transaction/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node ./src/app.ts"
+  },
   "devDependencies": {
     "ts-node": "^10.4.0",
     "typescript": "^4.4.4"
