feat: optimizing the Docker compose file

--- a/node-mongodb-transaction/docker-compose.yml
+++ b/node-mongodb-transaction/docker-compose.yml
@@ -7,40 +7,46 @@ services:
     volumes:
       - ~/mongors/data1:/data/db
       - ./rs-init.sh:/scripts/rs-init.sh
-    networks:
-      - mongors-network
+    expose:
+      - 27017
+#    networks:
+#      - mongors-network
     ports:
       - 27021:27017
-    links:
-      - mongo2
-      - mongo3
+#    links:
+#      - mongo2
+#      - mongo3
     restart: always
-    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs" ]
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs", "--journal", "--dbpath", "/data/db", "--enableMajorityReadConcern", "false" ]
   mongo2:
     container_name: mongo2
     image: mongo:4.4
     volumes:
       - ~/mongors/data2:/data/db
-    networks:
-      - mongors-network
+    expose:
+      - 27017
+#    networks:
+#      - mongors-network
     ports:
       - 27022:27017
     restart: always
-    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs" ]
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs", "--journal", "--dbpath", "/data/db", "--enableMajorityReadConcern", "false" ]
   mongo3:
     container_name: mongo3
     image: mongo:4.4
     volumes:
       - ~/mongors/data3:/data/db
-    networks:
-      - mongors-network
+    expose:
+      - 27017
+#    networks:
+#      - mongors-network
     ports:
       - 27023:27017
     restart: always
-    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs" ]
+    entrypoint: [ "/usr/bin/mongod", "--bind_ip_all", "--replSet", "dbrs", "--journal", "--dbpath", "/data/db", "--enableMajorityReadConcern", "false" ]
 
-networks:
-  mongors-network:
-    external: true
+# networks:
+#  mongors-network:
+#    external: true
 #    driver: overlay
 #    attachable: true
