--- a/node-csv-read/package.json
+++ b/node-csv-read/package.json
@@ -3,8 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "start": "ts-node index.ts"
+  },
   "devDependencies": {
+    "@types/node": "^17.0.0",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "neat-csv": "^7.0.0"
   }
 }
