--- a/node-typeorm-planetscale/package.json
+++ b/node-typeorm-planetscale/package.json
@@ -3,14 +3,16 @@
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
    "devDependencies": {
-      "ts-node": "3.3.0",
+      "@types/express": "^4.17.13",
       "@types/node": "^8.0.29",
+      "ts-node": "3.3.0",
       "typescript": "3.3.3333"
    },
    "dependencies": {
-      "typeorm": "0.2.41",
+      "express": "^4.17.2",
+      "mysql": "^2.14.1",
       "reflect-metadata": "^0.1.10",
-      "mysql": "^2.14.1"
+      "typeorm": "0.2.41"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
