--- a/node-typeorm-planetscale/tsconfig.json
+++ b/node-typeorm-planetscale/tsconfig.json
@@ -10,6 +10,8 @@
       "outDir": "./build",
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true,
-      "sourceMap": true
+      "sourceMap": true,
+      "allowSyntheticDefaultImports": true,
+      "esModuleInterop": true
    }
 }
