--- a/prisma-shadow-db/package.json
+++ b/prisma-shadow-db/package.json
@@ -11,5 +11,8 @@
     "prisma": "^3.8.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.5"
+  },
+  "dependencies": {
+    "@prisma/client": "3.8.1"
   }
 }
