feat: access the file through the browser

--- a/springboot-file-upload/src/main/resources/application.properties
+++ b/springboot-file-upload/src/main/resources/application.properties
@@ -1,1 +1,2 @@
-app.file.upload-dir=./springboot-file-upload/uploads/files
+app.file.upload-dir=./uploads/files
+app.file.storage.mapping=file:~/blog-tutorials/springboot-file-upload/uploads/
