--- a/node-excel-write/package.json
+++ b/node-excel-write/package.json
@@ -20,5 +20,8 @@
     "prettier": "^2.2.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "exceljs": "^4.3.0"
   }
 }
