--- a/node-mongo-prisma/package.json
+++ b/node-mongo-prisma/package.json
@@ -18,7 +18,11 @@
     "eslint-plugin-sort-destructure-keys": "^1.4.0",
     "nodemon": "^2.0.16",
     "prettier": "^2.6.2",
+    "prisma": "^3.15.2",
     "ts-node": "^10.8.0",
     "typescript": "^4.7.2"
+  },
+  "dependencies": {
+    "@prisma/client": "^3.15.2"
   }
 }
