--- a/node-caching/package.json
+++ b/node-caching/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "@prisma/client": "4.1.1",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "ioredis": "^5.2.2"
   }
 }
