--- a/springboot-rest-api/src/main/resources/application.properties
+++ b/springboot-rest-api/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.password=secret
 
 ## Hibernate properties
 spring.jpa.hibernate.use-new-id-generator-mappings=false
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
