feat: finalize the project about spring rest api and swagger

--- a/springboot-rest-api-swagger/src/main/resources/application.properties
+++ b/springboot-rest-api-swagger/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.hibernate.use-new-id-generator-mappings=false
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
+
+
+springdoc.packages-to-scan=com.tericcabrel.taskman.controllers
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.path=documentation
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.filter=true
+springdoc.swagger-ui.tagsSorter=alpha
