--- a/node-email-ses/package.json
+++ b/node-email-ses/package.json
@@ -11,6 +11,7 @@
   "devDependencies": {
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.3",
+    "@types/nodemailer": "^6.4.6",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
     "eslint": "^8.26.0",
@@ -25,6 +26,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "handlebars": "^4.7.7"
+    "handlebars": "^4.7.7",
+    "nodemailer": "^6.8.0"
   }
 }
