--- a/node-cron-job/package.json
+++ b/node-cron-job/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@types/node": "^18.11.9",
+    "@types/node-cron": "^3.0.5",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "eslint": "^8.26.0",
@@ -19,6 +20,11 @@
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.8.4",
+    "@types/express": "^4.17.14"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-cron": "^3.0.2"
   }
 }
