--- a/node-graphql/package.json
+++ b/node-graphql/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "node-graphql",
+  "name": "node-typescript-starter",
   "version": "1.0.0",
-  "description": "GraphQL server application with Node.js and Apollo",
+  "description": "Node project starter with Typescript, ESLint and Prettier",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
@@ -9,23 +9,23 @@
     "eslint:fix": "eslint --fix"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^2.1.1",
-    "@graphql-codegen/typescript": "^2.1.2",
-    "@graphql-codegen/typescript-resolvers": "^2.1.2",
-    "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-sort-destructure-keys": "^1.3.5",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "@graphql-codegen/cli": "^3.2.2",
+    "@graphql-codegen/typescript": "^3.0.2",
+    "@graphql-codegen/typescript-resolvers": "^3.1.1",
+    "@types/node": "^18.15.2",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint": "^8.36.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-sort-destructure-keys": "^1.5.0",
+    "nodemon": "^2.0.21",
+    "prettier": "^2.8.4",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.5"
   },
   "dependencies": {
-    "apollo-server": "^3.3.0",
-    "graphql": "^15.5.1"
+    "@apollo/server": "^4.5.0",
+    "graphql": "^16.6.0"
   }
 }
