--- a/node-typeorm-planetscale/package.json
+++ b/node-typeorm-planetscale/package.json
@@ -2,22 +2,21 @@
    "name": "node-typeorm-planetscale",
    "version": "0.0.1",
    "description": "Awesome project developed with TypeORM.",
+   "type": "commonjs",
    "devDependencies": {
-      "@types/cors": "^2.8.12",
-      "@types/express": "^4.17.13",
-      "@types/node": "^17.0.10",
-      "ts-node": "3.3.0",
-      "typescript": "3.3.3333"
+      "@types/express": "^4.17.17",
+      "@types/node": "^16.18.26",
+      "ts-node": "10.7.0",
+      "typescript": "4.5.2"
    },
    "dependencies": {
-      "cors": "^2.8.5",
-      "express": "^4.17.2",
+      "express": "^4.18.2",
       "mysql": "^2.14.1",
-      "reflect-metadata": "^0.1.10",
-      "typeorm": "0.2.41"
+      "reflect-metadata": "^0.1.13",
+      "typeorm": "0.3.15"
    },
    "scripts": {
       "start": "ts-node src/index.ts",
-      "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
+      "typeorm": "typeorm-ts-node-commonjs"
    }
 }
