--- a/springboot-docker-compose/pom.xml
+++ b/springboot-docker-compose/pom.xml
@@ -59,6 +59,11 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-docker-compose</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
