--- a/lambda-node-cdk/package.json
+++ b/lambda-node-cdk/package.json
@@ -11,20 +11,17 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.124.0",
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "aws-cdk": "1.124.0",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "@types/jest": "^29.5.12",
+    "@types/node": "20.11.16",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "aws-cdk": "2.128.0",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.3.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda": "^1.124.0",
-    "@aws-cdk/aws-sns": "1.124.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.124.0",
-    "@aws-cdk/aws-sqs": "1.124.0",
-    "@aws-cdk/core": "1.124.0"
+    "aws-cdk-lib": "2.128.0",
+    "constructs": "^10.0.0",
+    "source-map-support": "^0.5.21"
   }
 }
