feat: finalize project for node lambda esbuild cdk

--- a/node-lambda-timeviewer/package.json
+++ b/node-lambda-timeviewer/package.json
@@ -11,26 +11,21 @@
     "cdk": "cdk"
   },
   "devDependencies": {
-    "@aws-cdk/assertions": "1.134.0",
-    "@types/aws-lambda": "^8.10.85",
-    "@types/jest": "^26.0.10",
-    "@types/node": "10.17.27",
-    "aws-cdk": "1.134.0",
-    "jest": "^26.4.2",
-    "ts-jest": "^26.2.0",
-    "ts-node": "^9.0.0",
-    "typescript": "~3.9.7"
+    "@types/aws-lambda": "^8.10.133",
+    "@types/jest": "^29.5.12",
+    "@types/node": "20.11.16",
+    "aws-cdk": "2.128.0",
+    "esbuild": "^0.20.0",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.2",
+    "ts-node": "^10.9.2",
+    "typescript": "~5.3.3"
   },
   "dependencies": {
-    "@aws-cdk/aws-lambda-nodejs": "^1.134.0",
-    "@aws-cdk/aws-sns": "1.134.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.134.0",
-    "@aws-cdk/aws-sqs": "1.134.0",
-    "@aws-cdk/core": "1.134.0",
-    "@vvo/tzdb": "^6.34.0",
-    "add": "^2.0.6",
-    "date-fns": "^2.27.0",
-    "date-fns-tz": "^1.1.6",
-    "yarn": "^1.22.17"
+    "@vvo/tzdb": "^6.125.0",
+    "aws-cdk-lib": "2.128.0",
+    "constructs": "^10.0.0",
+    "dayjs": "^1.11.10",
+    "source-map-support": "^0.5.21"
   }
 }
