--- a/node-lambda-timeviewer/tsconfig.json
+++ b/node-lambda-timeviewer/tsconfig.json
@@ -1,9 +1,10 @@
 {
   "compilerOptions": {
-    "target": "ES2018",
+    "target": "ES2020",
     "module": "commonjs",
     "lib": [
-      "es2018"
+      "es2020",
+      "dom"
     ],
     "declaration": true,
     "strict": true,
@@ -21,7 +22,8 @@
     "strictPropertyInitialization": false,
     "typeRoots": [
       "./node_modules/@types"
-    ]
+    ],
+    "esModuleInterop": true
   },
   "exclude": [
     "node_modules",
