--- a/node-typescript-starter/package.json
+++ b/node-typescript-starter/package.json
@@ -6,19 +6,19 @@
   "license": "MIT",
   "private": false,
   "scripts": {
-    "lint": "eslint src/**/*.ts --fix"
-  },
-  "dependencies": {
-    "typescript": "^5.2.2"
+    "lint": "eslint src/**/*.ts --fix",
+    "start": "nodemon --watch \"*.ts\" --exec \"node -r ts-node/register --env-file=.env\" ./src/index.ts"
   },
   "devDependencies": {
-    "@types/node": "^20.7.0",
-    "@typescript-eslint/eslint-plugin": "^6.7.3",
-    "@typescript-eslint/parser": "^6.7.3",
-    "eslint": "^8.50.0",
-    "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-prettier": "^5.0.0",
-    "prettier": "^3.0.3",
-    "ts-node": "^10.9.1"
+    "@types/node": "20.11.25",
+    "@typescript-eslint/eslint-plugin": "7.1.1",
+    "@typescript-eslint/parser": "7.1.1",
+    "eslint": "8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "nodemon": "3.1.0",
+    "prettier": "3.2.5",
+    "ts-node": "10.9.2",
+    "typescript": "5.4.2"
   }
 }
