--- a/node-build-docker/Dockerfile-no-bundle
+++ b/node-build-docker/Dockerfile-no-bundle
@@ -8,7 +8,7 @@ COPY . .
 
 RUN yarn install
 
-RUN npx esbuild ./src/index.ts --bundle --platform=node --outfile=build/index.js
+RUN yarn tsc
 
 FROM node:20-alpine AS app
 
@@ -18,7 +18,10 @@ RUN mkdir -p /app
 
 WORKDIR /app
 
-COPY --chown=node:node --from=builder /app/build/index.js /app
+COPY --chown=node:node --from=builder /app/package.json /app
+COPY --chown=node:node --from=builder /app/build/ /app
+
+RUN yarn install --frozen-lockfile --production
 
 EXPOSE 4500
 
