--- a/node-web-scraping/.env.example
+++ b/node-web-scraping/.env.example
@@ -1,8 +1,4 @@
 HOST=http://localhost
 PORT=4500
 
-DB_HOST=localhost
-DB_PORT=27017
-DB_USER=user
-DB_PASS=secret
-DB_NAME=company
+MONGODB_URL=mongodb://user:secret@localhost:27018/admin
