--- a/node-web-scraping/package.json
+++ b/node-web-scraping/package.json
@@ -1,35 +1,43 @@
 {
   "name": "node-typescript-starter",
   "version": "1.0.0",
-  "description": "Node project starter with Typescript, ESLint and Prettier",
+  "description": "Node project starter with TypeScript, ESLint and Prettier",
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "scrape": "ts-node ./src/scraper.ts",
-    "start": "nodemon --watch \"*.ts\" --exec \"ts-node\" ./src/index.ts",
-    "eslint:fix": "eslint --fix"
-  },
-  "devDependencies": {
-    "@types/express": "^4.17.11",
-    "@types/mongoose": "^5.10.3",
-    "@types/node": "^14.14.22",
-    "@typescript-eslint/eslint-plugin": "^4.14.1",
-    "@typescript-eslint/parser": "^4.14.1",
-    "eslint": "^7.18.0",
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "eslint-plugin-sort-destructure-keys": "^1.3.5",
-    "nodemon": "^2.0.7",
-    "prettier": "^2.2.1",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "build": "tsc -b",
+    "start": "node -r ts-node/register --watch --env-file=.env ./src/index.ts",
+    "lint": "eslint src",
+    "lint:fix": "eslint src --fix",
+    "prepare": "husky"
   },
   "dependencies": {
-    "@types/cheerio": "^0.22.30",
-    "axios": "^0.21.1",
-    "cheerio": "^1.0.0-rc.10",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.12.1"
-  }
+    "axios": "^1.7.7",
+    "cheerio": "^1.0.0",
+    "express": "4.21.0",
+    "mongoose": "8.7.0"
+  },
+  "devDependencies": {
+    "@types/cheerio": "^0.22.35",
+    "@types/express": "4.17.21",
+    "@types/node": "22.7.4",
+    "@typescript-eslint/eslint-plugin": "8.8.0",
+    "@typescript-eslint/parser": "8.8.0",
+    "eslint": "8.57.1",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-sort-destructure-keys": "2.0.0",
+    "husky": "9.1.6",
+    "lint-staged": "15.2.10",
+    "prettier": "3.3.3",
+    "ts-node": "10.9.2",
+    "typescript": "5.6.2"
+  },
+  "lint-staged": {
+    "**/*.ts?(x)": [
+      "eslint src --fix",
+      "prettier --write"
+    ]
+  },
+  "packageManager": "yarn@1.22.22"
 }
